--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,15 @@
     </parent>
     <groupId>ru.javarush</groupId>
     <artifactId>uziki-parts</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <version>0.0.1</version>
     <name>uziki-parts</name>
     <description>Javarush internship test task</description>
 
     <properties>
-        <java.version>1.8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <start-class>ru.javarush.uzikiparts.UzikiPartsApplication</start-class>
     </properties>
 
     <dependencies>
@@ -46,6 +49,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
     </dependencies>
 
